# mcp-sentiment

./: README.md  app.py  pyproject.toml
test/: test_schema.py
